--- a/websites/fußball.html
+++ b/websites/fußball.html
@@ -48,7 +48,7 @@
           <label for="teamCaptain">Name des Team Kapitäns:</label>
           <input type="text" id="teamCaptain" name="teamCaptain" placeholder="Luis Mustermann" required><br>
 
-          <label for="captainEmail">Email Addresse des Kapitäns:</label>
+          <label for="captainEmail">Email Adresse des Kapitäns:</label>
           <input type="email" id="captainEmail" name="captainEmail" placeholder="LuisMustermann@musterlu.de" required><br>
           
           <!-- This is where players will be added -->
@@ -73,13 +73,13 @@
          <div id="buttons-container">
           <div style="display: flex; justify-content: center; align-items: center; margin-left: -8%; margin-bottom: 20%;">
             <button type="button" onclick="addPlayer()" style="border: 0px;border-radius: 25px; width: 100%; max-width: 50px; background-color: #7A7A7A; font-size: 1.5rem; color: #FFFFFF; margin-left: 1%;">+</button>
-            <p style="font-size: 1rem; color: #757575; text-align: left;">(Weiteren Mitspieler/-in hinzufügen)</p>
+            <p style="font-size: 1rem; color: #757575; text-align: left;">(Weitere/n Mitspieler/-in hinzufügen)</p>
           </div>
           <button type="submit" id="submit-button" style="background-color: #333333; color: #FFFFFF; border-radius: 25px; border: 0px; width: 100%; max-width: 200px; font-size: 2rem;">Teilnehmen</button>
         </div>
       </form>
 
-      <div id="popupMessage">Submission Successful!</div>
+      <div id="popupMessage">Anmeldung erfolgreich!</div>
 
       <script>
         const form = document.getElementById("myForm");
@@ -103,7 +103,7 @@
             popupMessage.style.visibility = "visible";
             setTimeout(() => {
                 popupMessage.style.visibility = "hidden";
-            }, 2000);
+            }, 5000);
 
             // Clear form inputs
             form.reset();
