--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Montag, Dienstag, Mittwoch, Freitag 2. Pause E 4.05<br>Donnerstag 2. Pause E 2.05</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Montag, Dienstag, Mittwoch, Freitag 2. Pause E 4.05<br><br>Donnerstag 2. Pause E 2.05</p>
             </div> 
         </div>
 
