--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -19,6 +19,11 @@
         bottom: 30px;
         padding: 15px;
       }
+      /* Adjust Add Player button style */
+      #addPlayerBtn {
+        margin-right: -5%;
+        margin-top: -2.5%;
+      }
     </style>
 </head>
 <body>
@@ -71,7 +76,7 @@
         
             <!-- Buttons container -->
             <div id="buttons-container">
-              <div style="display: flex; justify-content: center; align-items: center; margin-left: -8%; margin-bottom: 20%;">
+              <div id="addPlayerBtn" style="display: flex; justify-content: center; align-items: center; margin-left: -8%; margin-bottom: 20%;">
                 <button type="button" onclick="addPlayer()" style="border: 0px;border-radius: 25px; width: 100%; max-width: 50px; background-color: #7A7A7A; font-size: 1.5rem; color: #FFFFFF; margin-left: 1%;">+</button>
                 <p style="font-size: 1rem; color: #757575; text-align: left;">(Weitere/n Mitspieler/-in hinzufügen)</p>
               </div>
