--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -19,10 +19,12 @@
         bottom: 30px;
         padding: 15px;
       }
-      /* Adjust Add Player button style */
-      #addPlayerBtn {
-        margin-right: -10%;
+      /* Responsive design adjustments */
+      @media (max-width: 768px) {
+        #addPlayerBtn {
+          margin-right: -10%;
         margin-top: -5%;
+        }
       }
     </style>
 </head>
