modified:   "websites/fu\303\237ball.html" 	modified:   websites/volleyball.html

--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -142,7 +142,7 @@
       // Create label and input for the new player
       const newLabel = document.createElement("label");
       newLabel.setAttribute("for", "player" + playerCount);
-      newLabel.innerText = "Teilnehmer " + playerCount + ":";
+      newLabel.innerText = "Mitspieler/-in " + playerCount + ":";
   
       const newInput = document.createElement("input");
       newInput.type = "text";
