Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Fußballspieler/-innen treffen sich am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>. </p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Volleyballspieler/-innen treffen sich bei der <b>Albert-Schäffle-</b> und der <b>Fritz-Ruoff-Schule</b> auf dem <b>Säer</b>, Nürtingen.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Volleyballspieler/-innen treffen sich bei den Turnhallen der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, Nürtingen.</p>
             </div> 
         </div>
 
@@ -72,10 +72,10 @@
           <img src="images/pexels-javierbalseiro-9576026.jpg" alt="Volleyball" style="border-radius: 20px; width: 100%;">
         </div>
         <div style="height: 100%; max-height: 250px; width: 100%; max-width: 230px; margin-bottom: 12.5%; margin-top: 12.5%;">
-          <p style="color: #4594D1; text-align: left; margin-bottom: -20%;">Kontaktpersonen</p>
-          <p style="text-align: left; margin-bottom: -25%;">Sabrina Beck</p>
+          <p style="color: #4594D1; text-align: left; margin-bottom: -20%;"><b>Kontaktpersonen</b></p>
+          <p style="text-align: left; margin-bottom: -25%;"><b>Sabrina Beck</b></p>
           <p style="text-align: left; margin-bottom: -20%;">becksa@pmhs.de</p>
-          <p style="text-align: left; margin-bottom: -25%;">Tobias Berndt</p>
+          <p style="text-align: left; margin-bottom: -25%;"><b>Tobias Berndt</b></p>
           <p style="text-align: left; margin-bottom: -20%;">berndtto@pmhs.de</p>
         </div>
       </div>
