--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
           <a href="websites/volleyball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Volleyball</button></a>
         </div>
 
+        <div style="height: 20px;"></div>
+
+        <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
+            <div style="width: 85%; height: 100%; border-radius: 25px;background-color: #D66C60;">
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.8rem;">Bitte <b>lest</b> euch <b>zu erst</b> diese <b>Seite</b> durch, <b>bevor</b> ihr euch anmeldet!</p>
+            </div> 
+        </div>
+
         <p><b>Regeln und Fristen</b></p>
 
         <div class="RegelContainer">
@@ -35,7 +43,7 @@
             </div>
 
             <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Das erste Team kostet <br> <br> <b>10€</b> <br><br><br> jedes weitere <br> <br> <b>5€</b></p>
+                <p style="text-align: center; color: #000000;">Das erste Team kostet <br> <br> <b>10€</b> <br><br><br> jedes weitere derselben Klasse <br> <br> <b>5€</b></p>
             </div>
         </div>
 
@@ -51,20 +59,20 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-<<<<<<< HEAD
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Montag, Dienstag, Mittwoch, Freitag 2. Pause E 4.05<br><br>Donnerstag 2. Pause E 2.05</p>
-=======
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Montag, Dienstag, Mittwoch, Freitag 2. Pause, Gebäude E, Raum 4.05<br><br>Donnerstag 2. Pause, Gebäude E, Raum 2.05</p>
->>>>>>> 6a27fbb3402fe9131bef1fd8f27466a0dcdf4a19
+
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Ab dem <b>23.09.2024</b> bis zum <b>07.10.2024</b><br><br>Montag, Dienstag, Mittwoch und Freitag, 2. Pause, Gebäude E, Raum 4.05<br><br>Donnerstag 2. Pause, Gebäude E, Raum 2.05</p>
             </div> 
         </div>
 
-        <p><b>Örtlichkeiten</b></p>
+        <p><b style="font-size: 2rem;">Infos</b></p>
+
+        <p><b>Örtlichkeiten und Daten</b></p>
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Fußballspieler/-innen treffen sich am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>. </p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die Volleyballspieler/-innen treffen sich bei der <b>Albert-Schäffle-</b> und der <b>Fritz-Ruoff-Schule</b> auf dem <b>Säer</b>, Nürtingen.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis <b>16:00</b> Uhr statt.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die <b>Fußballspieler/-innen</b> treffen sich am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Die <b>Volleyballspieler/-innen</b> treffen sich bei der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>.</p>
             </div> 
         </div>
 
@@ -75,10 +83,10 @@
           <img src="images/pexels-javierbalseiro-9576026.jpg" alt="Volleyball" style="border-radius: 20px; width: 100%;">
         </div>
         <div style="height: 100%; max-height: 250px; width: 100%; max-width: 230px; margin-bottom: 12.5%; margin-top: 12.5%;">
-          <p style="color: #4594D1; text-align: left; margin-bottom: -20%;">Kontaktpersonen</p>
-          <p style="text-align: left; margin-bottom: -25%;">Sabrina Beck</p>
+          <p style="color: #4594D1; text-align: left; margin-bottom: -20%;"><b>Kontaktpersonen</b></p>
+          <p style="text-align: left; margin-bottom: -25%;"><b>Sabrina Beck</b></p>
           <p style="text-align: left; margin-bottom: -20%;">becksa@pmhs.de</p>
-          <p style="text-align: left; margin-bottom: -25%;">Tobias Berndt</p>
+          <p style="text-align: left; margin-bottom: -25%;"><b>Tobias Berndt</b></p>
           <p style="text-align: left; margin-bottom: -20%;">berndtto@pmhs.de</p>
         </div>
       </div>
