modified:   index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr statt.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr, bei schlechtem Wetter findet das Sportturnier am 21.10.2024 zur selben Uhrzeit statt.</p>
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet Vormittags und Nachmittags, am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt.</p>
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Volleyballturnier</b> findet Nachmittags, in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
             </div> 
