--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr, <b>bei schlechtem Wetter</b> findet das Sportturnier am <b>21.10.2024</b> zur <b>selben Uhrzeit</b> statt.</p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet vormittags und nachmittags, am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die Eingangsklassen vormittags spielen.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet <b>vormittags und nachmittags</b>, am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.</p>
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Volleyballturnier</b> findet <b>nachmittags</b>, in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
             </div> 
         </div>
