modified:   websites/volleyball.html

--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -42,6 +42,14 @@
         
         <p><b>Anmeldeformular</b></p>
 
+        <div style="height: 20px;"></div>
+
+        <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
+            <div style="width: 85%; height: 100%; border-radius: 25px;background-color: #D66C60;">
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.8rem;">Pro Team werden mindestens 6 Mitspieler/-innen benötigt!</p>
+            </div> 
+        </div>
+
         <form id="myForm" onsubmit="submitForm(event)">
             <label for="schoolclass">Vollständiger Klassenname:</label>
             <input type="text" id="schoolclass" name="schoolclass" placeholder="TGG 12/2" required><br>
