modified:   CSS/styles.css 	modified:   index.html 	modified:   "websites/fu\303\237ball.html" 	modified:   websites/volleyball.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <div class="image-container">
-            <img src="images/pexels-black-ice-551383-1314544.jpg" alt="Uhr">
+            <img src="images/pexels-black-ice-551383-1314544.png" alt="Uhr">
         </div>
 
         <div class="RegelnMiddle" style="display: flex; justify-content: center; align-items: center; margin-top: auto;">
@@ -24,19 +24,13 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; border-radius: 25px;background-color: #D66C60;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.8rem;">Bitte <b>lest</b> euch <b>zu erst</b> diese <b>Seite</b> durch, <b>bevor</b> ihr euch anmeldet!</p>
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.65rem;">Bitte <b>lest</b> euch <b>zuerst</b> diese <b>Seite</b> durch, <b>bevor</b> ihr euch anmeldet!</p>
             </div> 
         </div>
 
         <p><b>Regeln und Fristen</b></p>
 
         <div class="RegelContainer">
-            <div class="RegelBox">
-                <p style="text-align: center; color: #000000;">Stollenschuhe mit Schraubstollen sind <b>verboten!</b></p>
-                <div class="image-container">
-                    <img src="images/images_1.png" alt="Uhr" style="height: 100%; width: 100%;">
-                </div>
-            </div>
 
             <div class="RegelBox">
                 <p style="text-align: center; color: #000000;">Anmeldeschluss zur Eintragung eines Teams <br> <br> <b>07.10.2024</b></p>
@@ -45,13 +39,30 @@
             <div class="RegelBox">
                 <p style="text-align: center; color: #000000;">Das erste Team kostet <br> <br> <b>10€</b> <br><br><br> jedes weitere derselben Klasse <br> <br> <b>5€</b></p>
             </div>
+
+            <div class="RegelBox">
+                <p style="text-align: center; color: #000000;">Stollenschuhe mit Schraubstollen sind <b>verboten!</b></p>
+                <div class="image-container">
+                    <img src="images/images_1.png" alt="Uhr" style="height: 100%; width: 100%;">
+                </div>
+            </div>
         </div>
 
         <div style="height: 20px;"></div>
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;">Teams, die diese Gebühr <b>nicht</b> rechtzeitig bezahlen, werden <b>nicht</b> in das Turnier einbezogen.</p>
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.65rem;">Teams, die diese Gebühr <b>nicht</b> rechtzeitig bezahlen, werden <b>nicht</b> in das Turnier einbezogen.</p>
+            </div> 
+        </div>
+
+        <p><b style="font-size: 2rem;">Infos</b></p>
+
+        <p><b>Anmeldung</b></p>
+
+        <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
+            <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Bei der Anmeldung eines Teams ist <b>zu beachten</b>, dass ein Team <b>mindestens 6 Mitspieler/-innen</b> haben sollte, <b>einschließlich</b> des Team-Kapitäns.<br>Wenn Sie ein Team mit weniger als <b>6 Mitspieler/-innen</b> anmelden möchten, werden <b>passende Personen</b> aus weiteren <b>kleineren Teams zusammengeführt</b>.<br><br>Bei <b>mehr als 6 Mitspieler/-innen</b>, werden die <b>übrigen Mitspieler/-innen als Ersatzspieler</b> desselben Teams verwendet.</p>
             </div> 
         </div>
 
@@ -59,18 +70,15 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Ab dem <b>23.09.2024</b> bis zum <b>07.10.2024</b><br><br>Montag, Dienstag, Mittwoch und Freitag, 2. Pause, Gebäude E, Raum 4.05<br><br>Donnerstag 2. Pause, Gebäude E, Raum 2.05</p>
             </div> 
         </div>
-
-        <p><b style="font-size: 2rem;">Infos</b></p>
 
         <p><b>Örtlichkeiten und Daten</b></p>
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr, <b>bei schlechtem Wetter</b> findet das Sportturnier am <b>21.10.2024</b> zur <b>selben Uhrzeit</b> statt.<br></p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr statt. Bei <b>sehr schlechtem Wetter</b> wird das Sportturnier auf den <b>21.10.2024</b> mit den <b>selben Uhrzeiten</b> verschoben.<br></p>
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet in 2 Turnieren statt, <b>eins vormittags und eins nachmittags</b>, am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.<br></p>
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Volleyballturnier</b> findet <b>nachmittags</b>, in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
             </div> 
