--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Bei der Anmeldung eines Teams ist <b>zu beachten</b>, dass ein Team <b>mindestens 6 Mitspieler/-innen</b> haben sollte, <b>einschließlich</b> des Team-Kapitäns.<br>Wenn Sie ein Team mit weniger als <b>6 Mitspieler/-innen</b> anmelden möchten, werden <b>passende Personen</b> aus weiteren <b>kleineren Teams zusammengeführt</b>.<br><br>Bei <b>mehr als 6 Mitspieler/-innen</b>, werden die <b>übrigen Mitspieler/-innen als Ersatzspieler</b> desselben Teams verwendet.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Bei der Anmeldung eines Teams ist <b>zu beachten</b>, dass ein Team <b>mindestens <br>6 Mitspieler/-innen</b> haben sollte, <b>einschließlich</b> des Team-Kapitäns.<br>Wenn Sie ein Team mit weniger als <b>6 Mitspieler/-innen</b> anmelden möchten, werden <b>passende Personen</b> aus weiteren <b>kleineren Teams zusammengeführt</b>.<br><br>Bei <b>mehr als <br>6 Mitspieler/-innen</b>, werden die <b>übrigen Mitspieler/-innen als Ersatzspieler</b> desselben Teams verwendet.</p>
             </div> 
         </div>
 
@@ -79,7 +79,7 @@
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr statt. Bei <b>sehr schlechtem Wetter</b> wird das Sportturnier auf den <b>21.10.2024</b> mit den <b>selben Uhrzeiten</b> verschoben.<br></p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet in 2 Turnieren statt, <b>eins vormittags und eins nachmittags</b>, am <b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.<br></p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet in <br>2 Turnieren statt, <b>eins vormittags und eins nachmittags</b>, am <br><b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.<br></p>
                 <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Volleyballturnier</b> findet <b>nachmittags</b>, in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
             </div> 
         </div>
