Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Bei der Anmeldung eines Teams ist <b>zu beachten</b>, dass ein Team <b>mindestens <br>6 Mitspieler/-innen</b> haben sollte, <b>einschließlich</b> des Team-Kapitäns.<br><br>Wenn ihr ein Team mit weniger als <b>6 Mitspieler/-innen</b> anmelden möchtet, werden <b>passende Personen</b> aus weiteren <b>kleineren Teams zusammengeführt</b>.<br><br>Bei <b>mehr als <br>6 Mitspieler/-innen</b>, werden die <b>übrigen Mitspieler/-innen als Ersatzspieler</b> desselben Teams verwendet.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Bei der Anmeldung eines Teams ist <b>zu beachten</b>, dass ein Team <b>mindestens <br>6 Mitspieler/-innen</b> haben sollte, <b>einschließlich</b> des Team-Kapitäns.<br><br>Wenn ein Team mit weniger als <b>6 Mitspieler/-innen</b> zustande kommt, werden <b>passende Personen</b> aus weiteren <b>kleineren Teams zusammengeführt</b>.<br><br>Bei <b>mehr als <br>6 Mitspieler/-innen</b>, werden die <b>übrigen Mitspieler/-innen als Ersatzspieler</b> desselben Teams verwendet.</p>
             </div> 
         </div>
 
