--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Ab dem <b>23.09.2024</b> bis zum <b>07.10.2024</b><br><br>Montag, Dienstag, Mittwoch und Freitag, 2. Pause, Gebäude E, Raum 4.05<br><br>Donnerstag 2. Pause, Gebäude E, Raum 2.05</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Ab dem <b>23.09.2024</b> bis zum <b>07.10.2024</b><br><br><b>Jeden Tag</b>, von <b>9:15 Uhr bis 9:30 Uhr</b> in der <b>Mensa</b>.</p>
             </div> 
         </div>
 
