--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #FFFFFF;">Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr statt. Bei <b>sehr schlechtem Wetter</b> wird das Sportturnier auf den <b>21.10.2024</b> mit den <b>selben Uhrzeiten</b> verschoben.<br></p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Fußballturnier</b> findet in <br>2 Turnieren statt, <b>eins vormittags und eins nachmittags</b>, am <br><b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.<br></p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b>Volleyballturnier</b> findet <b>nachmittags</b>, in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr statt. Bei <b>sehr schlechtem Wetter</b> wird das Sportturnier auf den <b>21.10.2024</b> mit den <b>selben Uhrzeiten</b> verschoben.<br></p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #00C73C;">Fußballturnier</b> findet in <br>2 Turnieren statt, <b>eins vormittags und eins nachmittags</b>, am <br><b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b>, statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.<br></p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #FF9100;">Volleyballturnier</b> findet <b>nachmittags</b>, in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
             </div> 
         </div>
 
