--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
-            <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #d66c6000;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;">Mit der <b>Anmeldung zum Sportturnier</b> erklären sich <b>alle Teilnehmenden damit einverstanden</b>, dass während der Veranstaltung <b></b>Foto- und Videoaufnahmen gemacht werden. Diese <b>Aufnahmen</b> dürfen <b>für</b> die <b>Berichterstattung und Veröffentlichung</b> auf <b>verschiedenen Plattformen</b> genutzt werden.</p>
+            <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Mit der <b>Anmeldung zum Sportturnier</b> erklären sich <b>alle Teilnehmenden damit einverstanden</b>, dass während der Veranstaltung <b></b>Foto- und Videoaufnahmen gemacht werden. Diese <b>Aufnahmen</b> dürfen <b>für</b> die <b>Berichterstattung und Veröffentlichung</b> auf <b>verschiedenen Plattformen</b> genutzt werden.</p>
             </div> 
         </div>
 
