Aktualisieren von fußball.html

--- a/websites/fußball.html
+++ b/websites/fußball.html
@@ -93,8 +93,8 @@
           <label for="teacher">Name des Klassenlehrers:<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
           <input type="text" id="teacher" name="teacher" placeholder="Herr/Frau Mustermann" required><br>
 
-          <label for="teamName">Name des Teams:<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
-          <input type="text" id="teamName" name="teamName" placeholder="Die Wilden Kerle" required><br>
+          <label for="teamName">Name des Teams:</label>
+          <input type="text" id="teamName" name="teamName" placeholder="Die Wilden Kerle"><br>
 
           <label for="teamCaptain">Name des Team Kapitäns:<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
           <input type="text" id="teamCaptain" name="teamCaptain" placeholder="Luis Mustermann" required><br>
