--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 
         <div class="RegelnMiddle" style="display: flex; justify-content: center; align-items: center; margin-top: auto;">
           <a href="index.html"><button class="Menu_Buttons" style="color: #FFFFFF; background-color: #009DFF;  margin-top: auto;">Regeln</button></a>
-          <a href="websites/fußball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Fußball</button></a>
-          <a href="websites/volleyball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Volleyball</button></a>
+          <a href=""><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Nicht Möglich</button></a>
+          <a href=""><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Nicht Möglich</button></a>
         </div>
+
+        <!--<div class="RegelnMiddle" style="display: flex; justify-content: center; align-items: center; margin-top: auto;">
+            <a href="index.html"><button class="Menu_Buttons" style="color: #FFFFFF; background-color: #009DFF;  margin-top: auto;">Regeln</button></a>
+            <a href="websites/fußball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Fußball</button></a>
+            <a href="websites/volleyball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Volleyball</button></a>
+        </div>-->
 
         <div style="height: 20px;"></div>
 
