--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -16,8 +16,9 @@
         z-index: 1;
         left: 50%;
         transform: translateX(-50%);
-        bottom: 30px;
+        bottom: 25%;
         padding: 15px;
+        font-size: 2rem;
       }
       /* Responsive design adjustments */
       @media (max-width: 768px) {
@@ -107,13 +108,13 @@
             <!-- This is where players will be added -->
             <div id="players-container">
               <label for="player1">Mitspieler/-in 1 (Vorname und Nachname):<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
-              <input type="text" id="player1" name="player1" placeholder="Ben Mustermann" size="40"><br>
+              <input type="text" id="player1" name="player1" placeholder="Ben Mustermann" size="40" required><br>
         
               <label for="player2">Mitspieler/-in 2 (Vorname und Nachname):<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
-              <input type="text" id="player2" name="player2"  placeholder="Ben Mustermann" size="40"><br>
+              <input type="text" id="player2" name="player2" placeholder="Ben Mustermann" size="40" required><br>
 
               <label for="player3">Mitspieler/-in 3 (Vorname und Nachname):<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
-              <input type="text" id="player3" name="player3" placeholder="Ben Mustermann" size="40"><br>
+              <input type="text" id="player3" name="player3" placeholder="Ben Mustermann" size="40" required><br>
 
               <label for="player4">Mitspieler/-in 4 (Vorname und Nachname):<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
               <input type="text" id="player4" name="player4" placeholder="Ben Mustermann" size="40"><br>
