--- a/websites/fußball.html
+++ b/websites/fußball.html
@@ -92,6 +92,15 @@
 
         <p><b>Anmeldeformular</b></p>
 
+        <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
+          <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
+              <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;"><b>Verspätete Anmeldungen sowie die Geldabgabe laufen über eure Sportlehrer!</b></p>
+          </div> 
+        </div>
+
+        <p style="margin-bottom: 15%;">Hier könnt ihr auch später die Spielpläne einsehen.</p>
+
+        <!--
         <form id="myForm" onsubmit="submitForm(event)">
           <label for="schoolclass">Vollständiger Klassenname:<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
           <input type="text" id="schoolclass" name="schoolclass" placeholder="TGG 12/2" required><br>
@@ -117,7 +126,6 @@
               <option value="Nachmittags">Nachmittags</option>
             </select><br>
   
-            <!-- Hidden text field for "Other" reason -->
             <div id="ReasonContainer">
               <label for="ZeitGrund">Grund für den Zeitenwechsel:</label>
               <input type="text" id="ZeitGrund" name="ZeitGrund" placeholder="Gebe hier den Grund ein">
@@ -278,6 +286,7 @@
             }
           </script>
     </div>
+    -->
     <div class="BarBottom">
       <div class="BarBottomContent">
         <div class="image-container" style="margin-left: 2.5%; margin-right: 2.5%;">
