--- a/websites/volleyball.html
+++ b/websites/volleyball.html
@@ -87,8 +87,15 @@
         
         <p><b>Anmeldeformular</b></p>
 
-        <div style="height: 20px;"></div>
+        <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
+          <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
+              <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000;"><b>Verspätete Anmeldungen sowie die Geldabgabe laufen über eure Sportlehrer!</b></p>
+          </div> 
+        </div>
 
+        <p style="margin-bottom: 15%;">Hier könnt ihr auch später die Spielpläne einsehen.</p>
+
+        <!--
         <form id="myForm" onsubmit="submitForm(event)">
             <label for="schoolclass">Vollständiger Klassenname:<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
             <input type="text" id="schoolclass" name="schoolclass" placeholder="TGG 12/2" required><br>
@@ -105,7 +112,6 @@
             <label for="captainEmail">Email Adresse des Kapitäns:<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
             <input type="email" id="captainEmail" name="captainEmail" placeholder="LuisMustermann@musterlu.de" required><br>
 
-            <!-- This is where players will be added -->
             <div id="players-container">
               <label for="player1">Mitspieler/-in 1 (Vorname und Nachname):<span class="optional-star">*<span class="tooltip-text">Notwendig</span></span></label>
               <input type="text" id="player1" name="player1" placeholder="Ben Mustermann" size="40" required><br>
@@ -123,7 +129,6 @@
               <input type="text" id="player5" name="player5" placeholder="Ben Mustermann" size="40"><br>
             </div>
         
-            <!-- Buttons container -->
             <div id="buttons-container">
               <div id="addPlayerBtn" style="display: flex; justify-content: center; align-items: center; margin-left: -8%; margin-bottom: 20%;">
                 <button type="button" onclick="addPlayer()" style="border: 0px;border-radius: 25px; width: 100%; max-width: 50px; background-color: #7A7A7A; font-size: 1.5rem; color: #FFFFFF; margin-left: 1%;">+</button>
@@ -234,6 +239,7 @@
     .catch(error => console.error('Error:', error));
         }
   </script>
+  -->
 
     </div>
     <div class="BarBottom">
