--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
         <div class="RegelnMiddle" style="display: flex; justify-content: center; align-items: center; margin-top: auto;">
           <a href="index.html"><button class="Menu_Buttons" style="color: #FFFFFF; background-color: #009DFF;  margin-top: auto;">Regeln</button></a>
-          <a href="websites/fußball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Fußball</button></a>
-          <a href="websites/volleyball.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Volleyball</button></a>
+          <a href="websites/anmeldung.html"><button class="Menu_Buttons" style="color: #77AEF2; background-color: #FFFFFF; margin-top: auto;">Anmeldung</button></a>
         </div>
 
         <div style="height: 20px;"></div>
@@ -52,7 +51,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #D66C60;">
-                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.65rem;">Teams, die diese Gebühr <b>nicht</b> rechtzeitig bezahlen, werden <b>nicht</b> in das Turnier einbezogen.</p>
+                <p style="text-align: center; color: #FFFFFF; background-color: #d66c6000; font-size: 1.65rem;"></p>
             </div> 
         </div>
 
@@ -62,7 +61,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 5%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Bei der Anmeldung eines Teams ist <b>zu beachten</b>, dass ein Team <b>mindestens <br>6 Mitspieler/-innen</b> haben sollte, <b>einschließlich</b> des Team-Kapitäns.<br><br>Wenn ein Team mit weniger als <b>6 Mitspieler/-innen</b> zustande kommt, werden <b>passende Personen</b> aus weiteren <b>kleineren Teams zusammengeführt</b>.<br><br>Bei <b>mehr als <br>6 Mitspieler/-innen</b>, werden die <b>übrigen Mitspieler/-innen als Ersatzspieler</b> desselben Teams verwendet.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;"></p>
             </div> 
         </div>
 
@@ -76,7 +75,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Ab dem <b>23.09.2024</b> bis zum <b>07.10.2024</b><br><br><b>Jeden Tag</b>, von <b>9:15 Uhr bis 9:30 Uhr</b> in der <b>Mensa</b>.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;"></p>
             </div> 
         </div>
 
@@ -84,9 +83,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Sportturnier</b> findet am <b>14.10.2024</b> von ca. <b>8:00</b> Uhr bis ca. <b>16:00</b> Uhr statt. Bei <b>sehr schlechtem Wetter</b> wird das Sportturnier auf den <b>21.10.2024</b> mit den <b>selben Uhrzeiten</b> verschoben.<br></p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #00C73C;">Fußballturnier</b> findet in <br>2 Turnieren, <b>eins vormittags und eins nachmittags</b>, am <br><b>Wörth Stadion</b> in der <b>Millotstraße 14, Nürtingen</b> statt. Hierbei wird bevorzugt, dass die <b>Eingangsklassen vormittags</b> spielen.<br></p>
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #FF9100;">Volleyballturnier</b> findet <b>nachmittags</b> in der Turnhalle der <b>Albert-Schäffle-Schule</b> auf dem <b>Säer</b>, <b>Nürtingen</b>, statt.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Der Skitag</b> findet am <b>DATUM</b> von ca. <b>ZEIT</b> Uhr bis ca. <b>ZEIT</b> Uhr statt.</p>
             </div> 
         </div>
 
@@ -94,14 +91,12 @@
     <div class="BarBottom">
       <div class="BarBottomContent">
         <div class="image-container" style="margin-left: 2.5%; margin-right: 2.5%;">
-          <img src="images/pexels-javierbalseiro-9576026.jpg" alt="Volleyball" style="border-radius: 20px; width: 100%;">
+          <img src="images/" alt="Ski" style="border-radius: 20px; width: 100%;">
         </div>
         <div style="height: 100%; max-height: 250px; width: 100%; max-width: 230px; margin-bottom: 12.5%; margin-top: 12.5%;">
           <p style="color: #4594D1; text-align: left; margin-bottom: -20%;"><b>Kontaktpersonen</b></p>
-          <p style="text-align: left; margin-bottom: -25%;"><b>Sabrina Beck</b></p>
-          <p style="text-align: left; margin-bottom: -20%;">becksa@pmhs.de</p>
-          <p style="text-align: left; margin-bottom: -25%;"><b>Tobias Berndt</b></p>
-          <p style="text-align: left; margin-bottom: -20%;">berndtto@pmhs.de</p>
+          <p style="text-align: left; margin-bottom: -25%;"><b>Sebastian Stephan</b></p>
+          <p style="text-align: left; margin-bottom: -20%;">ste@pmhs.de</p>
         </div>
       </div>
     </div>
