new file:   images/Skier.jpg 	new file:   images/Szene1.jpg 	new file:   images/Szene2.jpg 	new file:   images/Szene3.jpg 	modified:   index.html 	modified:   websites/anmeldung.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <div class="image-container">
-            <img src="images/pexels-black-ice-551383-131454e4.png" alt="Uhr">
+            <img src="images/Szene1.jpg" alt="Uhr">
         </div>
 
         <div class="RegelnMiddle" style="display: flex; justify-content: center; align-items: center; margin-top: auto;">
@@ -91,7 +91,7 @@
     <div class="BarBottom">
       <div class="BarBottomContent">
         <div class="image-container" style="margin-left: 2.5%; margin-right: 2.5%;">
-          <img src="images/" alt="Ski" style="border-radius: 20px; width: 100%;">
+          <img src="images/Szene2.jpg" alt="Ski" style="border-radius: 20px; width: 100%;">
         </div>
         <div style="height: 100%; max-height: 250px; width: 100%; max-width: 230px; margin-bottom: 12.5%; margin-top: 12.5%;">
           <p style="color: #4594D1; text-align: left; margin-bottom: -20%;"><b>Kontaktpersonen</b></p>
