--- a/websites/anmeldung.html
+++ b/websites/anmeldung.html
@@ -75,7 +75,7 @@
 <body>
     <div>
         <div class="image-container">
-            <img src="../images/" alt="Skitag">
+            <img src="../images/Skier.jpg" alt="Skitag">
         </div>
 
         <div class="VolleyballMiddle" style="display: flex; justify-content: center; align-items: center; margin-top: auto;">
@@ -185,7 +185,7 @@
     <div class="BarBottom">
       <div class="BarBottomContent">
         <div class="image-container" style="margin-left: 2.5%; margin-right: 2.5%;">
-          <img src="../images/" alt="Volleyball" style="border-radius: 20px; width: 100%;">
+          <img src="../images/Szene3.jpg" alt="Volleyball" style="border-radius: 20px; width: 100%;">
         </div>
         <div style="height: 100%; max-height: 250px; width: 100%; max-width: 230px; margin-bottom: 12.5%; margin-top: 12.5%;">
           <p style="color: #FFAA00; text-align: left; margin-bottom: -20%;"><b>Kontaktpersonen</b></p>
