modified:   index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; margin-bottom: 15%;">
             <div style="width: 85%; height: 100%; font-size: 20px; border-radius: 25px;background-color: #F0F0F0;">
-                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Der Skitag</b> findet am <b>DATUM</b> von ca. <b>ZEIT</b> Uhr bis ca. <b>ZEIT</b> Uhr statt.</p>
+                <p style="text-align: center; color: #000000; background-color: #d66c6000;">Das <b style="color: #009DFF;">Der Skitag</b> findet am <b>12.02.2025</b>statt. <br>Abfahrt Nürtingen: 06:15 Uhr <br>Abfahrt Fellhorn: 15:45 Uhr <br>Ankunft Nürtingen vsl. 19:00 Uhr</p>
             </div> 
         </div>
 
